Mise a jour conf docker-compose

--- a/stormproducer/Dockerfile
+++ b/stormproducer/Dockerfile
@@ -1,7 +1,7 @@
-FROM jimschubert/8-jdk-alpine-mvn
+FROM openjdk:8
 MAINTAINER marc&greg <@zenika.com>
 COPY target/stormproducer-0.0.1-SNAPSHOT.jar /usr/src/
 WORKDIR /usr/src/
-EXPOSE 5672
+
 CMD java -jar /usr/src/stormproducer-0.0.1-SNAPSHOT.jar
 
