--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
 version: '2'
 services:
   serverrabbit:
-    image: rabbitmq:3-management
+    image: rabbitmq:3.6.9-management
     ports:
       - "5672:5672"
       - "15672:15672"
     container_name: serverrabbit
   stormproducer:
-    image: ncswarm/stormproducer:0.0.2
-    ports:
-      - "80:8080"
-    links:
-      - serverrabbit
+    build: stormproducer
     container_name: stormproducer
