Mise a jour du dockerfile pour lancer la compilation à la construction de l'image

--- a/stormproducer/Dockerfile
+++ b/stormproducer/Dockerfile
@@ -1,7 +1,9 @@
 FROM openjdk:8
 MAINTAINER zenika-nightclazz <@zenika.com>
-COPY target/stormproducer-0.0.1-SNAPSHOT.jar /usr/src/
+ADD . /usr/src
+#COPY target/stormproducer-0.0.1-SNAPSHOT.jar /usr/src/
 WORKDIR /usr/src/
+CMD ./mvnw install
 
-CMD java -jar /usr/src/stormproducer-0.0.1-SNAPSHOT.jar
+CMD java -jar /usr/src/target/stormproducer-0.0.1-SNAPSHOT.jar
 
