--- a/jedifactory/Dockerfile
+++ b/jedifactory/Dockerfile
@@ -1,7 +1,9 @@
 FROM openjdk:8
 MAINTAINER zenika-nightclazz <@zenika.com>
-COPY target/jedifactory-0.0.1-SNAPSHOT.jar /usr/src/
+ADD . /usr/src
+#COPY target/jedifactory-0.0.1-SNAPSHOT.jar /usr/src/
 WORKDIR /usr/src/
+CMD ./mvnw install
 
 CMD java -jar /usr/src/jedifactory-0.0.1-SNAPSHOT.jar
 
